config/samples/apps_v1_deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: epic-sample
spec:
  selector:
    matchLabels:
      app: epic-sample
  template:
    metadata:
      labels:
        app: epic-sample
    spec:
      containers:
      - image: k8s.gcr.io/echoserver:1.10
        name: kuard
      topologySpreadConstraints:
      - topologyKey: kubernetes.io/hostname
        maxSkew: 1
        labelSelector:
          matchLabels:
            app: epic-sample
        whenUnsatisfiable: ScheduleAnyway
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: epic-sample2
spec:
  selector:
    matchLabels:
      app: epic-sample2
  template:
    metadata:
      labels:
        app: epic-sample2
    spec:
      containers:
      - image: k8s.gcr.io/echoserver:1.10
        name: kuard
      topologySpreadConstraints:
      - topologyKey: kubernetes.io/hostname
        maxSkew: 1
        labelSelector:
          matchLabels:
            app: epic-sample2
        whenUnsatisfiable: ScheduleAnyway
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: epic-sample3
spec:
  selector:
    matchLabels:
      app: epic-sample3
  template:
    metadata:
      labels:
        app: epic-sample3
    spec:
      containers:
      - image: k8s.gcr.io/echoserver:1.10
        name: kuard
      topologySpreadConstraints:
      - topologyKey: kubernetes.io/hostname
        maxSkew: 1
        labelSelector:
          matchLabels:
            app: epic-sample3
        whenUnsatisfiable: ScheduleAnyway
