config/samples/core_v1_service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: epic-sample
spec:
  type: NodePort
  selector:
    app: epic-sample
  ports:
  - port: 80
    targetPort: 8080
    name: http
---
kind: Service
apiVersion: v1
metadata:
  name: epic-sample2
spec:
  type: NodePort
  selector:
    app: epic-sample2
  ports:
  - port: 80
    targetPort: 8080
    name: http
---
kind: Service
apiVersion: v1
metadata:
  name: epic-sample3
spec:
  type: NodePort
  selector:
    app: epic-sample3
  ports:
  - port: 80
    targetPort: 8080
    name: http
