config/samples/gateway_v1a2_httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: epic-sample1
spec:
  parentRefs:
  - name: epic-sample
  rules:
  - backendRefs:
    - name: epic-sample
      port: 8080
